traffic-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: traffic-generator
  labels:
    app: traffic-generator
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args:
    - -c
    - while true; do wget -q -O- http://apache-frontend-service; sleep 5; done
