kubectl apply -f containment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: containment
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: not-traffic-generator
